@@ -1,3 +1,13 @@
+2007-08-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
+	(drawHorizontalItem): Check for null data items,
+	(drawVerticalItem): Likewise,
+	* tests/org/jfree/chart/renderer/category/junit/StatisticalBarRendererTests.java
+	(testDrawWithNullMeanVertical): New test method,
+	(testDrawWithNullMeanHorizontal): Likewise,
+	(testDrawWithNullDeviationVertical): Likewise,
+	(testDrawWithNullDeviationHorizontal): Likewise.
 
 2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>
 
